--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ Random_Wallet_List="false"
 Increase_Gas_Price="1.02"
 Type_Value="amount" #procent/amount
 Gas_Price_Max="3.5" #Use in 2 chains
+Min_ETH_Remaining="0.015"
 
 ## BRIDGE
 Value_Bridge_Min="20" #% or amount
